[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket  = { version = "0.5.0", features = ["json"] }
rocket_okapi = {version = "0.8.0", features = ["swagger"]}
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }